Fix a Java 9 IDE nag. Ensure possible exceptions are handled.